# simple-risk-dashboard

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  run.py
dashboard/: apps.py  urls.py  views.py
dashboard/templates/dashboard/: index.html
fintech/: settings.py  urls.py  wsgi.py
simulation/: apps.py  config.py  data_store.py  risk_engine.py  simulator.py  state.py  streamer.py  trading_engine.py
