[project]
name = "simple-risk-dashboard"
version = "0.2.0"
description = "MVP Risk Management Dashboard — Django backend, Plotly.js frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation", "dashboard", "fintech"]

[dependency-groups]
dev = []
